...
        "BtnCancel": "Cancel",
        "BtnNextPage": "Next",
        "BtnPreviousPage": "Prev",
        "BtnNewFolder": "New folder",
        "BtnAddPhoto": "Add a photo",
        "BtnAddPage": "Add",
        "BtnSave": "Save",
        "BtnShare": "Share",
        "BtnChangeName": "Rename",
        "BtnDelete": "Delete",
        "BtnDuplicate": "Duplicate",
        "MenuFromCamera": "Camera",
        "MenuFromMediaLib": "Camera roll",
        "MenuNewPageEmpty": "Blank",
        "MenuNewPageLines": "Lined",
        "MenuNewPageMath": "Grid",
        "EmptyPageName":"Empty page",

        "CaptionPageName": "Name",
        "CaptionFolderNameList": "Folder",
...
