...
    ChooseFolder: 'Choose a folder',

    SearchResults: 'Search results',
    NoSearchResults: 'No worksheets or folders were found',

    SavePageFormTitle: 'Save Worksheet',
    RenameFormTitle: 'Rename',
    DuplicatePageFormTitle: 'Duplicate Worksheet',
    TemplatePageFormTitle: 'New from Template',
    MovePageFormTitle: 'Move Worksheet',

    EditFolderFormTitle: 'Edit Folder Name',
    NewFolderFormTitle: 'Create New Folder',
...
    BtnOK: 'OK',
    BtnNextPage: 'Next',
    BtnPreviousPage: 'Prev',
    BtnNewFolder: 'New folder',
    BtnAddPhoto: 'Add a photo',
    BtnAddPage: 'Add',
    BtnSave: 'Save',
    ShareMenuTitle: "Share",
    BtnShareAsPDF: 'Share as PDF',
    BtnShareAsImages: 'Share as Image',
    BtnShareIssieDocs: 'Share as Worksheet',
    BtnChangeName: 'Rename',
    BtnDelete: 'Delete',
    BtnDuplicate: 'Duplicate',
    BtnSaveAsTemplate: 'Save as Template',
    BtnEditTemplate: 'Edit Template',
    BtnMove: 'Move',
    BtnUndoAll: 'Delete All Changes In This Page',
    BtnLockChanges: 'Reset Undo',
    BtnUnlockChanges: 'Unlock Reset',
    BtnShareFolder: 'Share Folder',
    MoveFolderFormTitle: 'Move Folder',
    ShareFolderError: 'Share Folder Error',
    AddPageMenuTitle: 'Add Page',
    MenuFromCamera: 'Camera',
    MenuFromMediaLib: 'Camera roll',
    MenuNewPageEmpty: 'Blank',
    MenuNewPageLines: 'Lined',
    MenuNewPageMath: 'Grid',
    EmptyPageName: 'Empty page',

    CaptionPageName: 'Name',
    OrientationCaption: 'Orientation',
...
