...
      });
    }
  };

  newPageButton = rtl => {
    return (
      <View key="6" testID="new-page-btn" ref={ref => this._newPageBtnRef = ref} collapsable={false}>
        {getSvgIconButton(
          () => this.openNewPageMenu(),
          semanticColors.addButton,
          'menu-new-empty-page',
          40,
        )}
...
              semanticColors.addButton,
              'new-camera',
              40,
              undefined,
              undefined,
              undefined,
              'new-camera-btn',
            )}
            <Spacer />
            {getSvgIconButton(
              () => {
                this.newFromMediaLib();
              },
...
              semanticColors.addButton,
              'new-folder',
              45,
              undefined,
              undefined,
              undefined,
              'new-folder-btn',
            )}
            <Spacer />
            {this.newPageButton(rtl)}

            {/*right buttons */}
            <View
...
