...
        }}>
            {  //Cancel
                getRoundedButton(() => this.props.navigation.goBack(), 'cancel-red', translate("BtnCancel"), 30, 30, { width: 150, height: 40 }, undefined, undefined, this.isMobile())
            }
            <Spacer width={10} />
            {  //Save
                getRoundedButton(() => this.Save(), 'check-green', translate("BtnSave"), 30, 30, { width: 150, height: 40 }, undefined, undefined, this.isMobile(), undefined, undefined, undefined, 'folder-save-btn')
            }
        </View>



        let iconsSelection = <View style={{ width: this.isLandscape() ? '45%' : '100%', }}>
...
                                        {this.state.icon ? <FolderIcon name={this.state.icon} size={30} color='white' /> : null}
                                    </View>
                                </View>


                                <TextInput style={[globalStyles.textInput, { direction, textAlign }, getFontFamily()]} value={this.state.name}
                                    testID="folder-name-input"
                                    allowFontScaling={false}
                                    onChangeText={(txt) => this.setState({ name: txt })}
                                />
                                <AppText style={[styles.titleText, { textAlign }]}>{translate("CaptionFolderColor")}</AppText>
                                {colorSelection}
                                {!this.isLandscape() && iconsSelection}
...
