...
    trace("FileNameDialog", folders, folder, name)
    return (
        <View style={[styles.textInputView, isLandscape ? { flexDirection: rowReverse } : {}]} onLayout={onLayout}>
            <View style={{ flex: 1, width: '100%' }}>
                <AppText style={[styles.titleText, { textAlign }, { marginVertical: 7 }]}>{translate("CaptionPageName")}</AppText>
                <TextInput style={[globalStyles.textInput, { direction, textAlign }, getFontFamily()]}
                    testID="worksheet-name-input"
                    onChangeText={onChangeName}
                    value={name}
                    allowFontScaling={false}
                />
                <Spacer />
                {includeOrientation && <View style={{ flex: 1, width: '100%' }}>
...
        backgroundColor: 'white', alignItems: 'center'
    },
})

export function getHeaderBackButton(callback) {
    return <View >
        <TouchableOpacity testID="folder-home-btn" onPress={callback}
            activeOpacity={1}
            style={{ flexDirection: 'row', alignItems: 'center' }}>
            {/* <Icon name='keyboard-arrow-left' color='white' size={35} /> */}
            <Spacer width={10} />
            {/* <Icon name={'home'} color='white' size={40} /> */}
            <SvgIcon name='home' color='white' size={30} />
...
